fix: header spacing

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -536,6 +536,10 @@ code {
   padding-top: 1rem;
 }
 
+.article__wrapper article h2 {
+  margin-top: 2rem;
+}
+
 article h2 {
   line-height: var(--line-height-2xl);
   margin-top: 0;
